# ptp210_repo_v4

./: .gitignore  README.md  ptp210.py  pyproject.toml
.github/workflows/: ci.yml
examples/: quick_demo.py
ptp_sieve/: __init__.py  ptp.py  segmented.py  wheel.py
tests/: test_segmented.py  test_small.py
